ultros/static/main.css
@font-face {
  font-family: Jaldi;
  font-weight: regular;
  src: url('/static/Jaldi-Regular.ttf');
  font-display: swap;
}

@font-face {
  font-family: Jaldi-Bold;
  font-weight: bold;
  src: url('/static/Jaldi-Bold.ttf');
  font-display: swap;
}

@font-face {
  font-family: Pacifico-Regular;
  font-weight: regular;
  src: url("/static/Pacifico-Regular.ttf");
  font-display: swap;
}

@font-face {
  font-family: 'xivicons';
  src: url('/static/classjob-icons/src/FFXIVAppIcons.eot');
  src: url('/static/classjob-icons/src/FFXIVAppIcons.eot?#iefix') format('embedded-opentype'),
    url('/static/classjob-icons/src/FFXIVAppIcons.woff') format('woff'), url('./FFXIVAppIcons.ttf') format('truetype'),
    url('/static/classjob-icons/src/FFXIVAppIcons.svg#FFXIVAppIcons') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class*='xiv-']:before {
  display: inline-block;
  font-family: 'xivicons';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: #3B2B9E;
  transition: color .25s;
}

a:hover,a:active {
  color: #fff;
  transition: color .25s;
}

body {
  background-image: url('/static/images/flower_4.webp');
  background-size: 500px;
  background-position: top;
  max-width: 100vw;
  background-color: #100a13;
  color: #fff;
  position:relative;
  overflow-x: hidden;
}

html {
  overflow-x: hidden;
  width: 100vw;
}

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.gradient-outer {
  position: absolute;
  width: 120vw;
  height: 100%;
  max-height: 200vh;
  z-index: -500;
  overflow: clip;
}

.gradient {
  background: linear-gradient(black 100px, transparent 200vh);
  position: relative;
  width: 100%;
  height: 110%;
  left: 0px;
  top: 0px;
  opacity: 1.0;
  z-index: -10000;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  flex-wrap: wrap-reverse;
  padding: 10px;
}

.btn {
  margin: 10px 15px;
  border: solid #3B2B9E 2px;
  border-radius: 5px;
  font-size: 1.2em;
  font-family: Jaldi, sans-serif;
  min-width: 100px;
  background-color: #18003470;
  color: #fff;
  margin: 5px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.btn:hover {
  background-color: #0f0a28;
  border-color: #281f66;
  transition: 0.3s;
  transition-property: background-color, box-shadow;
  box-shadow: inset 0px 0px 0px 2px #00000023;
  color: #a2e;
  text-decoration: none;
}

.main-content .btn {
  color: #fff;
  background-color: #18003470;
}


.btn:active {
  background-color: #846D8F;
}


input.btn {
  color: #fff;
  background-color: #18003470;
  padding: 0px;
}

nav>a,
nav>*>a {
  color: #fff;
  margin: 5px;
  text-decoration: none;
  font-size: large;
  height: 36px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: .25s;
}

nav a>* {
  padding: 5px;
}

nav>a:hover,
nav>*>a:hover {
  color: #846D8F;
  transition: .25s;
}

.hero-title {
  margin-top: 15%;
  margin-left: 10%;
  text-shadow: -5px -5px 10px #000;
  font-size: 76px;
  margin-bottom: 10%;
  font-family: 'Pacifico-Regular';
}

.hero-title::before {
  content: '';
  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: rgba(0, 0, 0, 0.5);

  z-index: -1;
}

.search-container {
  align-items: top;
  position: relative;
  height: 52px;
}

.search-box {
  height: 36px;
  margin: 5px;
  padding: 0px 10px;
  flex-direction: column;
  font-family: inherit;
  font-size: large;
  color: #fff;
  background-color: #18003470;
  border: solid grey 1px;
  border-radius: 4px;
  transition: .5s 0s cubic-bezier(0.075, 0.82, 0.165, 1) background-color;
}

.search-box:hover {
  background-color: #44304daa;
  transition: .5s 0s cubic-bezier(0.075, 0.82, 0.165, 1) background-color;
}

.search-box.active,
.search-box:active {
  background-color: #48394F;
  transition: .5s 0s cubic-bezier(0.075, 0.82, 0.165, 1) background-color;
  border: 1px solid #b996ca;
  border-bottom: 0px;
}

.search-box.active~.search-results,
.search-box:active~.search-results,
.search-results:focus-within {
  visibility: visible;
  opacity: 1;
  animation: .25s cubic-bezier(.76, 0, .24, 1) search-open;
  margin-left: 5px;
  height: 500px;
  border-top: 0px;
  margin-top: -5px;
}


.search-results:hover {
  visibility: visible;
}

.search-results {
  background-color: #281A2DED;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 0px;
  width: 424px;
  position: relative;
  overflow-y: scroll;
  overflow-x: hidden;
  opacity: 0.0;
  z-index: 100;
  margin-top: -2px;
  border: 1px solid #b996ca;
  border-radius: 0px 0px 5px 5px;
}

@keyframes search-open {
  0% {
    height: 0px;
  }

  100% {
    height: 500px;
  }
}


.search-result {
  display: flex;
  text-align: left;
  justify-content: left;
  align-items: center;
  width: 424px;
  height: 40px;
  background-color: rgba(0, 0, 0, 0.22);
  /* animation-name: search-result-in; */
  animation-duration: .1s;
  animation-timing-function: cubic-bezier(.24, .27, .18, .81);
  transition: background-color 1s;
  border: solid #111 1px;
}

.search-result:hover {
  background-color: #48394F;
}

.item-name>b {
  color: #846D8F;
}

@keyframes search-result-in {
  from {
    opacity: 0.5;
    transform: translateX(50%)
  }

  to {
    opacity: 1.0;
    transform: translateX(0);
  }
}

.search-result-details {
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center;
  color: white;
  width: 100%;
}

.search-result img:first-of-type {
  margin: 5px;
}

.item-name {
  font-size: 16px;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: clip;
}

.item-type {
  font-size: 14px;
  text-align: left;
}

.avatar {
  width: 36px;
  height: 36px;
  border-radius: 36px;
  padding: 5px;
}
/* ... */

